--- a/CameraActivityChecker/packages.config
+++ b/CameraActivityChecker/packages.config
@@ -3,5 +3,7 @@
   <package id="EmguCV" version="3.1.0.1" targetFramework="net462" />
   <package id="OpenTK" version="2.0.0" targetFramework="net462" />
   <package id="OpenTK.GLControl" version="1.1.2349.61993" targetFramework="net462" />
+  <package id="ToastNotifications" version="2.2.2" targetFramework="net462" />
+  <package id="ToastNotifications.Messages" version="2.2.2" targetFramework="net462" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net462" />
 </packages>
