--- a/src/CameraActivityChecker/CameraActivityChecker.csproj
+++ b/src/CameraActivityChecker/CameraActivityChecker.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netframework4.8</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon>Webcam.ico</ApplicationIcon>
